2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_migration.c: (exaAssertNotDirty), (exaDoMigration):
	* exa/exa_priv.h:
	* hw/kdrive/ephyr/ephyr_draw.c: (exaDDXDriverInit):
	Add an option to verify at the point of migration that pixmaps which
	aren't marked dirty are in fact not dirty.  This will hopefully help
	catch issues like the previous commit.  Leave it on in fakexa.

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaPutImage):
	Don't forget to mark the drawable as dirty in exaPutImage().  Fixes
	corruption with drivers that have UTS.  (Michel Dänzer)

2006-04-23  Donnie Berkholz  <spyderous@gentoo.org>

	* Makefile.am:
	Remove another reference to cfb16.

2006-04-23  Donnie Berkholz  <spyderous@gentoo.org>

	* hw/xfree86/dummylib/Makefile.am:
	strlcpy() doesn't exist on Linux, so use the implementation in os/.

2006-04-23  Matthieu Herrb <matthieu.herrb@laas.fr>
	* hw/xfree86/dummylib/xalloc.c
	* hw/xfree86/loader/loader.c\
	Don't access free memory after unloading a module.
	Bugzilla #4168.
	
2006-04-22  Benjamin Herrenschmidt  <benh@kernel.crashing.org> 

	* hw/xfree86/os-support/linux/lnx_KbdMap.c:
	When reading the kernel keyboard mapping (readKernelMapping in
	os-support/linux/lnx_KbdMap.c) we overrun the usefully-named global array
	'map', scribbling on other random static variables elsewhere. This
	is fixed by changing the size of at2lnx. (David Woodhouse). Bug #5169

2006-04-19  Keith Packard  <keithp@keithp.com>

	* fb/fbcompose.c: (fbFetch_x4a4), (fetchProcForPicture),
	(fbStore_x4a4), (storeProcForPicture):
	* render/picture.c: (PictureCreateDefaultFormats):
	* render/picture.h:
	Add support for x4a4 format (depth 4 at 8bpp). Bug #6325.

2006-04-18  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaDriverInit):
	* exa/exa_migration.c: (exaPixmapIsDirty), (exaPixmapShouldBeInFB),
	(exaDoMigration):
	* exa/exa_priv.h:
	* hw/kdrive/ephyr/ephyr_draw.c: (exaDDXDriverInit):